--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-03-16 22:27:47
+ * @LastEditTime: 2023-03-27 21:57:35
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -162,7 +162,7 @@
                         <h2>ptc业务日志收集 - 邮电</h2>
                         <p>
                             项目背景: 因监控需求从日志进行检索关键信息. 需要在服务器上部署Filebeat, Logstash, 过滤后传输到ES集群并展示监控.  <br>
-                            个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 部分业务监控数据需要在Logstash中编写Ruby脚本做聚合统计. 最后Grafana从ES获取数据做图形监控展示. <a style="color:#444;" href="https://raw.githubusercontent.com/erythrun/OpsScript/master/ELK%20%E6%97%A5%E5%BF%97%E8%A7%84%E5%88%99.txt">配置文件链接</a></p>
+                            个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 部分业务监控数据需要在Logstash中编写Ruby脚本做聚合统计. 最后Grafana从ES获取数据做图形监控展示. <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/elk-log-rules.txt">配置文件链接</a></p>
                     </article>
                     <article>
                         <h2>业务上报自动化 - 卓望</h2>
