--- a/english.html
+++ b/english.html
@@ -16,23 +16,23 @@
         <div class="mainDetails">
 
             <div id="name">
-                <h1 class="quickFade delayTwo">郑卓文</h1>
-                <h4 class="quickFade delayThree">求职意向:容器, 系统运维</h4>
-                <h4 class="quickFade delayThree">状态: 在职</h4>
-                <h4 class="quickFade delayThree">工作经验: 4年</h4>
-                <h4 class="quickFade delayThree">到岗时间: 一个月内</h4>
+                <h1 class="quickFade delayTwo">Ewen Zheng</h1>
+                <h4 class="quickFade delayThree">Job intention: Operations engineer</h4>
+                <h4 class="quickFade delayThree">Status: On the job</h4>
+                <h4 class="quickFade delayThree">Experience: 4 years</h4>
             </div>
 
             <!-- <div id="headshot" class="quickFade">
                 <img src="qrcode_erythrun.github.io.png" alt="erythron" />
-                <p style="font-size:12px;"> <a href="https://erythrun.github.io/resume/">网页版链接</a> </p>
+                <p style="font-size:12px;"> <a href="https://erythrun.github.io/resume/english.html">webpage link</a> </p>
             </div> -->
 
             <div id="contactDetails" class="quickFade delayFour">
                 <ul>
-                    <li>school: 广州大学华软软件学院</li>
-                    <li>学历: 全日制本科(2019届)</li>
-                    <li>专业: 网络安全</li>
+                    <li>University: Software engineering institute of guangzhou</li>
+                    <li>Education: Bachelor</li>
+                    <li>Graduation date: 2019</li>
+                    <li>Major: Network technology</li>
                     <li>Email: erythron@outlook.com</li>
                     <li>Phone: +86 17199922057</li>
                 </ul>
@@ -40,24 +40,24 @@
             <div class="clear"></div>
         </div>
 
-        <!-- <div id="mainArea" class="quickFade delayFive">
+        <div id="mainArea" class="quickFade delayFive">
             <section>
                 <div class="sectionTitle">
-                    <h1>技能</h1>
+                    <h1>Skills</h1>
                 </div>
 
                 <div id="skill" class="sectionContent">
                     <ul style="list-style: none">
                         <li>
                             <progress value="80" max="100"></progress>
-                            熟悉Docker容器, K8s容器编排技术, 了解容器网络.
+                             Proficient in Docker, Kubernetes.
                         </li>
                         <li>
                             <progress value="75" max="100"></progress>
-                            熟悉CentOS, Ubuntu, Debian发行版, 了解系统参数调优.
+                            Proficient Centos, Ubuntu, Debian Linux distribution.
                         </li>
                         <li><progress value="75" max="100"></progress>
-                            熟悉Python, 有一定的代码编写经验, 了解其Django框架.
+                            Proficient in Python, learn about the Django framework.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
@@ -202,6 +202,6 @@
 			<div class="clear"></div>
 		</section> -->
             <!--注释使用  -->
-        </div> -->
+        </div>
     </div>
 </body>
