--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-03-27 21:57:35
+ * @LastEditTime: 2023-03-30 21:47:49
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -84,7 +84,7 @@
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            了解Nginx, Caddy, KeepAlived, Zookeeper, Kafka等中间件的部署, 配置及维护.
+                            了解Nginx, Caddy, KeepAlived等中间件的部署, 配置及维护.
                         </li>
                         <!-- <li>
                             <progress value="60" max="100"></progress>
@@ -228,7 +228,7 @@
                     <h1>证书</h1>
                 </div>
                 <div id="skill" class="sectionContent">
-                    <h4>CKA(<a style="color:#444;" href="https://www.cncf.io/certification/cka/">K8s管理员</a>)&emsp;&emsp;CET4</h4>
+                    <h4>CKA&emsp;&emsp;CET-4</h4>
                     <h4>&nbsp;</h4>
                 </div>
                 <div class="clear"></div>
