--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-03-30 21:47:49
+ * @LastEditTime: 2023-03-31 09:40:57
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -146,9 +146,9 @@
                     <article>
                         <h2>私有云容器平台搭建以及维护 - 邮电</h2>
                         <p>
-                            内容: 1. 在客户私有环境中搭建部署, 维护容器平台以及K8s集群组件的运行. <br>
-                            &emsp;&emsp;&nbsp; 2. 为用户提供上云支持, 排查K8s集群异常原因并解决问题. <br>
-                            &emsp;&emsp;&nbsp; 3. 根据安全扫描报告, 协助研发对平台存在的漏洞进行修复.
+                            1. 在客户私有环境中搭建部署, 维护容器平台以及K8s集群组件的运行. <br>
+                            2. 为用户提供上云支持, 排查K8s集群异常原因并解决问题. <br>
+                            3. 根据安全扫描报告, 协助研发对平台存在的漏洞进行修复.
                         </p>
                     </article>
                     <article>
