--- a/english.html
+++ b/english.html
@@ -123,32 +123,32 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2>deploy and maintain container platform in private cloud </h2>
+                        <h2>deploy, maintain container platform - Telcom Talents </h2>
                         <p>
-                            内容: 1. 在客户私有环境中搭建部署, 维护容器平台以及K8s集群, 保障平台以及K8s集群组件的运行. <br>
-                            &emsp;&emsp;&nbsp; 2. 为用户提供上云支持, 排查K8s集群异常原因并解决问题, 保障业务在平台的运行. <br>
-                            &emsp;&emsp;&nbsp; 3. 根据安全扫描报告, 协助研发对平台存在的漏洞进行修复.
+                            1. Deploy, maintain the container platform and Kubernetes cluster in the client's private cloud, make sure they are stable running. <br>
+                            2. Provide Technical support for client, troubleshoot issues in Kubernetes cluster and platform. <br>
+                            3. Accord to the security scan report, assist developer to repair the security issues in the platform.
                         </p>
                     </article>
                     <article>
-                        <h2>Storm deployed by Helm</h2>
+                        <h2>Storm deployed by Helm - Telcom Talents</h2>
                         <p>
-                            I found the Storm package In Helm chart. But container platform deployed it will transfer some custom parameters such as SC, the package only use PVC to storage. So I took some time to learn the Helm template language, then modified template and value files to receive parameters when deployed.
+                            I found the Storm package In Helm chart. But container platform deployed it will transfer some custom parameters such as SC, the package only use PVC to storage. So I took some time to learn the Helm template language, then modified template and value files to use parameters when deployed.
                         </p>
                     </article>
                     <article>
-                        <h2>Log collect</h2>
+                        <h2>Log collect - Telcom Talents</h2>
                         <p>
-                            Get a mission need retrieve key information from logs. I need to deploy Filebeat on the server, collect logs to Logstash, filter them and transfer them to the ES cluster. <br>
+                            Get a task need retrieve key information from logs. I need to deploy Filebeat on the server, collect logs to Logstash, filter them and transfer them to the ElasticSearch cluster. <br>
 
-                            In this project, I wrote the Filebeat and Logstash filter rules. In order to reduce the pressure of ES cluster, some data need caculated in Logstash. So I wrote the Ruby finish it in Aggregate module of Logstash.
+                            In this project, I wrote the Filebeat and Logstash filter rules. In order to reduce the pressure of ES cluster, some data need caculated in Logstash. So I wrote the function with Ruby in Aggregate module of Logstash.
                             <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/elk-log-rules.txt">demo link</a></p>
                     </article>
                     <article>
-                        <h2>Monitor auto report</h2>
+                        <h2>Monitor auto report - Aspire</h2>
                         <p>
-                            The service monitoring data needs to be reported every hour. The data in Grafana, so I wrote a Python script  that it can vist Grafana web page in Chrome browser by Selenium library, then catch text data and screenshot from Grafana, filter the key information by Xpath, send the data via email finally. <br>
-                            Difficulties: After Grafana enabled account and password authentication, the script could not login. In the end I found a way to solve it. use nginx as reverse proxy, configure header in Grafana, pass security authentication by insert header in Nginx. <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/grafana_monitor_report_by_selenium.py">demo link</a></p>
+                            The service monitoring data needs to be reported every hour. The data in Grafana, so I wrote a Python script that it can vist Grafana web page in Chrome browser by Selenium library, then catch screenshot, filter the key information from Grafana by Xpath, send the data via email finally. <br>
+                            Difficulty: After Grafana enabled account and password authentication, the script could not login. In the end I found a way to solve it. use nginx as reverse proxy, configure header in Grafana, pass security authentication by insert header in Nginx. <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/grafana_monitor_report_by_selenium.py">demo link</a></p>
 
 
                         </p>
@@ -158,7 +158,7 @@
             </section>
             <section>
                 <div class="sectionTitle">
-                    <h1>CA</h1>
+                    <h1>Cert</h1>
                 </div>
                 <div id="skill" class="sectionContent">
                     <h4>CKA&emsp;&emsp;CET-4</h4>
