--- a/english.html
+++ b/english.html
@@ -74,7 +74,7 @@
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            Skillful some components, such as Nginx, Caddy, KeepAlived.
+                            Skillful some middleware, such as Nginx, KeepAlived, Caddy.
                         </li>
                         <li>
                             <progress value="60" max="100"></progress>
@@ -133,7 +133,7 @@
                     <article>
                         <h2>Storm deployed by Helm - Telcom Talents</h2>
                         <p>
-                            I found the Storm package In Helm chart. But container platform deployed it will transfer some custom parameters such as SC, the package only use PVC to storage. So I took some time to learn the Helm template language, then modified template and value files to use parameters when deployed.
+                            The Storm package already exists in Helm chart. But container platform deployed it will transfer some custom parameters such as SC, the package only use PVC to storage. So I took some time to learn the Helm template language, then modified template and value files to use parameters when deployed.
                         </p>
                     </article>
                     <article>
