--- a/english.html
+++ b/english.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Ewen Zheng - CV</title>
+    <title>Ewen Zheng - resume</title>
 
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="The Curriculum Vitae of Joe Bloggs." />
@@ -91,8 +91,8 @@
             </section>
             <section>
                 <div class="sectionTitle">
-                    <h1>Work</h1>
-                    <h1>EX</h1>
+                    <h1>work</h1>
+                    <h1>EXP</h1>
                 </div>
 
                 <div class="sectionContent">
@@ -116,9 +116,8 @@
             </section>
             <section>
                 <div class="sectionTitle">
-                    <h1>Pro-</h1>
-                    <h1>ject</h1>
-                    <h1>EX</h1>
+                    <h1>project</h1>
+                    <h1>EXP</h1>
                 </div>
 
                 <div class="sectionContent">
@@ -127,7 +126,7 @@
                         <p>
                             1. Deploy, maintain the container platform and Kubernetes cluster in the client's private cloud, make sure they are stable running. <br>
                             2. Provide Technical support for client, troubleshoot issues in Kubernetes cluster and platform. <br>
-                            3. Accord to the security scan report, assist developer to repair the security issues in the platform.
+                            3. Accord security scan report, assist developer to fix the security issues in the platform.
                         </p>
                     </article>
                     <article>
@@ -142,13 +141,13 @@
                             Get a task need retrieve key information from logs. I need to deploy Filebeat on the server, collect logs to Logstash, filter them and transfer them to the ElasticSearch cluster. <br>
 
                             In this project, I wrote the Filebeat and Logstash filter rules. In order to reduce the pressure of ES cluster, some data need caculated in Logstash. So I wrote the function with Ruby in Aggregate module of Logstash.
-                            <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/elk-log-rules.txt">demo link</a></p>
+                            <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/elk-log-rules.txt">demo config link</a></p>
                     </article>
                     <article>
                         <h2>Monitor auto report - Aspire</h2>
                         <p>
-                            The service monitoring data needs to be reported  manual every hour with Grafana. So I wrote a Python script that it can vist Grafana web page in Chrome browser by Selenium library, then catch screenshot, filter the key information from Grafana by Xpath, send the data via email finally. <br>
-                            Difficulty: After Grafana enabled account and password authentication, the script could not login. In the end I found a way to solve it. use nginx as reverse proxy, configure header in Grafana, pass security authentication by insert header in Nginx. <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/grafana_monitor_report_by_selenium.py">demo link</a></p>
+                            The service monitoring data needs to be reported  manual every hour with Grafana. So I wrote a Python script that it can access Grafana web page in Chrome browser by Selenium library, then catch screenshot, filter the key information from Grafana by Xpath, send the data via email finally. <br>
+                            Difficulty: After Grafana enabled account and password authentication, the script could not login. In the end I found a way to solve it, use nginx as reverse proxy, configure header in Grafana, pass security authentication by insert header in Nginx. <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/grafana_monitor_report_by_selenium.py">demo config link</a></p>
 
 
                         </p>
@@ -158,7 +157,7 @@
             </section>
             <section>
                 <div class="sectionTitle">
-                    <h1>Cert</h1>
+                    <h1>cert</h1>
                 </div>
                 <div id="skill" class="sectionContent">
                     <h4>CKA&emsp;&emsp;CET-4</h4>
