--- a/english.html
+++ b/english.html
@@ -108,7 +108,7 @@
                         <p>
                             1. Maintain Right Market system(running in Docker). <br>
                             2. Write the Dockerfile to build images. <br>
-                            3. The others: launch new service, write script, clean log.<br>
+                            3. The others: launch new service, write script, clean business log...<br>
                         </p>
                     </article>
                 </div>
@@ -146,8 +146,8 @@
                     <article>
                         <h2>Monitor auto report - Aspire</h2>
                         <p>
-                            The service monitoring data needs to be reported  manual every hour with Grafana. So I wrote a Python script that it can access Grafana web page in Chrome browser by Selenium library, then catch screenshot, filter the key information from Grafana by Xpath, send the data via email finally. <br>
-                            Difficulty: After Grafana enabled account and password authentication, the script could not login. In the end I found a way to solve it, use nginx as reverse proxy, configure header in Grafana, pass security authentication by insert header in Nginx. <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/grafana_monitor_report_by_selenium.py">demo config link</a></p>
+                            The service monitoring data needs to be reported manual every hour with Grafana. So I wrote a Python script that it can access Grafana web page in Chrome browser by Selenium library, then catch screenshot, filter the key information from Grafana by Xpath, send the data via email finally. <br>
+                            Difficulty: After Grafana enabled security authentication, the script could not login by password. In the end I found a way to solve it, use nginx as reverse proxy, configure header in Grafana, pass security authentication by insert header in Nginx. <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/grafana_monitor_report_by_selenium.py">demo config link</a></p>
 
 
                         </p>
@@ -166,16 +166,19 @@
                 <div class="clear"></div>
             </section>
             <section>
-                <!-- <div class="sectionTitle">
-                    <h1>Self</h1>
-                    <h1>assess</h1>
-                </div> -->
+                <div class="sectionTitle">
+                    <h1>self-</h1>
+                    <h1>access</h1>
+                    <h1>ment</h1>
+                </div>
 
                 <div class="sectionContent">
                     <article>
                         <h2> </h2>
                         <p>
-                            You can access my online resume by link <a style="color:#444;" href="https://erythrun.github.io/resume/english.html">https://erythrun.github.io/resume/english.html </a>, thank you~
+                            Can solve problems through Google or official documents. <br>
+                            Passionate about technology, keep learning, and constantly improve work ability. <br>
+                            Thanks for viewing my resume~ <a style="color:#444;" href="https://erythrun.github.io/resume/english.html">https://erythrun.github.io/resume/english.html</a>
                         </p>
                     </article>
                 </div>
