eng 打印样式修改

--- a/english.html
+++ b/english.html
@@ -5,7 +5,7 @@
     <meta name="description" content="The Curriculum Vitae of Joe Bloggs." />
     <meta charset="UTF-8">
 
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="style-eng.css">
     <!-- <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'> -->
     <link type="text/css" rel="stylesheet" href="font.css:400,700|Lato:400,300">
 
@@ -18,7 +18,7 @@
             <div id="name">
                 <h1 class="quickFade delayTwo">Ewen Zheng</h1>
                 <h4 class="quickFade delayThree">&emsp;</h4>
-                <h4 class="quickFade delayThree">Job intention: Operations engineer</h4>
+                <h4 class="quickFade delayThree">Job intention: Operations</h4>
                 <h4 class="quickFade delayThree">Status: On the job</h4>
                 <h4 class="quickFade delayThree">Experience: 4 years</h4>
             </div>
