--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-03-31 09:40:57
+ * @LastEditTime: 2023-04-13 14:16:16
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -113,8 +113,10 @@
                     <article>
                         <h2>广东邮电 - 云平台运维 - 2021.03-今 </h2>
                         <p>
-                            1. 电信自研K8s平台的搭建, 日常维护, 业务报障处理等. <br>
-                            2. ES集群的搭建, 业务权限配置, 集群异常处理.
+                            1. 在客户私有环境中搭建部署, 维护电信自研组件平台以及K8s集群的运行.  <br>
+                            2. 为用户提供上云支持, 排查组件, K8s集群异常原因并解决问题.
+                            3. 根据安全扫描报告, 协助研发对平台存在的漏洞进行修复或升级.
+                            4. ES集群的搭建, 业务权限配置, 集群异常处理.
                         </p>
                     </article>
                     <article>
@@ -143,14 +145,14 @@
                 </div>
 
                 <div class="sectionContent">
-                    <article>
+                    <!-- <article>
                         <h2>私有云容器平台搭建以及维护 - 邮电</h2>
                         <p>
                             1. 在客户私有环境中搭建部署, 维护容器平台以及K8s集群组件的运行. <br>
                             2. 为用户提供上云支持, 排查K8s集群异常原因并解决问题. <br>
                             3. 根据安全扫描报告, 协助研发对平台存在的漏洞进行修复.
                         </p>
-                    </article>
+                    </article> -->
                     <article>
                         <h2>Storm容器化部署 - 邮电</h2>
                         <p>
