--- a/ops.html
+++ b/ops.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-10 22:23:48
+ * @LastEditTime: 2023-04-13 14:20:17
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -148,10 +148,10 @@
                         </p>
                     </article>
                     <article>
-                        <h2>业务CICD流程 - 邮电</h2>
+                        <h2>Jenkins流水线编写 - 邮电</h2>
                         <p>
-                            背景: 内部业务易运营平台业务部署在K8s集群, 协助使用Jenkins配置流水线发布. <br>
-                            流水线内容: Jenkins抓取指定分支代码进行编译, 编译完成后通过Docker打包, 推送到Harbor仓库. 最后通过kubectl命令上线业务的image. (通过RBAC仅授予该kubectl对业务命名空间的操作权限)
+                            背景: 内部业务-易运营服务部署在K8s集群, 协助使用Jenkins配置流水线发布. <br>
+                            流水线内容: Jenkins克隆指定分支代码, 通过Docker进行多阶段bulid完成编译打包, 然后推送到Harbor仓库. 最后通过kubectl命令上线业务的image. (通过RBAC仅授予该kubectl对业务命名空间的操作权限)
 
                         </p>
                     </article>
