参考他人简历进行一定的修改

--- a/ops.html
+++ b/ops.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-10 22:23:48
+ * @LastEditTime: 2023-04-19 23:41:45
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -60,19 +60,19 @@
                 <div id="skill" class="sectionContent">
                     <ul style="list-style: none">
                         <li>
-                            <progress value="80" max="100"></progress>
-                            熟悉Docker容器, K8s容器编排技术, 了解容器网络.
-                        </li>
-                        <li>
                             <progress value="75" max="100"></progress>
                             熟悉CentOS, Ubuntu, Debian发行版, 了解系统参数调优.
                         </li>
-                        <li><progress value="75" max="100"></progress>
-                            熟悉Python, 有一定的代码编写经验, 了解其Django框架.
+                        <li>
+                            <progress value="80" max="100"></progress>
+                            熟悉K8s集群部署维护, 应用容器化部署以及问题排查.
+                        </li>
+                        <li><progress value="70" max="100"></progress>
+                            熟悉Python以及Shell, 有一定的代码编写经验, 了解其Django框架.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉Logstash日志收集过滤规则编写, 了解ES集群搭建维护及异常处理.
+                            熟悉Logstash日志收集过滤规则编写, 熟悉ES集群搭建维护及异常处理.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
@@ -83,12 +83,8 @@
                             熟悉使用Grafana做监控展示, 了解Prometheus的原理及使用.
                         </li>
                         <li>
-                            <progress value="65" max="100"></progress>
-                            了解Nginx, Caddy, KeepAlived等中间件的部署, 配置及维护.
-                        </li>
-                        <li>
                             <progress value="60" max="100"></progress>
-                            了解数据库原理, 有MySQL, Redis的配置使用经验.
+                            了解MySQL, Redis的原理及搭建维护, 有一定的SQL编写经验.
                         </li>
                         <li>
                             <progress value="60" max="100"></progress>
@@ -109,9 +105,9 @@
                     <article>
                         <h2>广东邮电 - 云平台运维 - 2021.03-今 </h2>
                         <p>
-                            1. 在客户私有环境中搭建部署, 维护电信自研平台以及K8s集群组件的运行. <br>
-                            2. 为用户提供上云支持, 排查容器集群异常原因并解决问题. <br>
-                            3. 私有环境中ES集群的搭建, 业务权限配置, 集群异常处理.
+                            1. 搭建, 维护电信天翼云平台以及组件, 包括K8s容器平台, ELK日志平台以及Zookeeper, Kafka, 负载均衡等组件. <br>
+                            2. 为用户提供平台服务支持, 协助业务上云: 如应用容器化部署, 业务日志收集等.<br>
+                            3. 公司内部业务的技术支持.
                         </p>
                     </article>
                     <article>
@@ -140,7 +136,7 @@
                             难点: 为降低集群压力,部分数据需要在Logstash中编写Ruby脚本做聚合统计. 最后Grafana从ES获取数据做图形监控展示. <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/elk-log-rules.txt">demo配置文件链接</a></p>
                     </article>
                     <article>
-                        <h2>服务器初始化 - 邮电</h2>
+                        <h2>Shell脚本服务器初始化 - 邮电</h2>
                         <p>
                             脚本背景: 客户提供的服务器多数处于网络离线状态, 且不符合开通实例要求, 需要登录手动配置Java, 挂盘等. <br>
                             主程序通过python编写, 并兼容python2, 为方便执行没有使用主流的paramiko库, 而是通过调用OS的scp, sshpass进行复制, 登录, 执行脚本. <br>
@@ -189,8 +185,8 @@
                     <article>
                         <h2> </h2>
                         <p>
-                            乐于尝试新事物, 遇到问题能通过Google或官方文档去学习, 解决;<br>
-                            不断提高自己的技术与工作能力. <br>
+                            认真负责, 乐于尝试新事物, 遇到问题能通过Google或官方文档去学习, 解决;<br>
+                            拥有较强的学习能力, 不断提高自己的技术水平. <br>
                             如需查看网页版简历请访问 <a style="color:#444;" href="https://erythrun.github.io/resume/ops.html">https://erythrun.github.io/resume/ops.html</a>
                         </p>
                     </article>
