--- a/ops.html
+++ b/ops.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-10 22:23:48
+ * @LastEditTime: 2023-04-20 14:37:14
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -106,8 +106,8 @@
                         <h2>广东邮电 - 云平台运维 - 2021.03-今 </h2>
                         <p>
                             1. 搭建, 维护电信天翼云平台以及组件, 包括K8s容器平台, ELK日志平台以及Zookeeper, Kafka, 负载均衡等组件. <br>
-                            2. 为用户提供平台服务支持, 协助业务上云: 如应用容器化部署, 业务日志收集等.<br>
-                            3. 公司内部业务的技术支持.
+                            2. 为用户解决平台或组件问题, 以及提供技术支持, 协助业务上云: 如应用容器化部署, 业务日志收集等.<br>
+                            3. 公司内部业务的运维支撑.
                         </p>
                     </article>
                     <article>
@@ -147,7 +147,7 @@
                         <h2>Jenkins流水线编写 - 邮电</h2>
                         <p>
                             背景: 内部业务-易运营服务部署在K8s集群, 协助使用Jenkins配置流水线发布. <br>
-                            流水线内容: Jenkins克隆指定分支代码, 通过Docker进行多阶段bulid完成编译打包, 然后推送到Harbor仓库. 最后通过kubectl命令上线业务的image. (通过RBAC仅授予该kubectl对业务命名空间的操作权限)
+                            流水线内容: Git克隆指定分支代码, 通过Docker进行多阶段bulid完成编译打包, 然后推送到Harbor仓库. 最后通过kubectl命令上线业务的image. (通过RBAC仅授予该kubectl对业务命名空间的操作权限)
 
                         </p>
                     </article>
