--- a/ops.html
+++ b/ops.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-20 14:37:14
+ * @LastEditTime: 2023-04-20 16:15:55
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -68,7 +68,7 @@
                             熟悉K8s集群部署维护, 应用容器化部署以及问题排查.
                         </li>
                         <li><progress value="70" max="100"></progress>
-                            熟悉Python以及Shell, 有一定的代码编写经验, 了解其Django框架.
+                            熟悉Python以及Shell, 有一定的代码编写经验, 了解Django框架.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
@@ -77,6 +77,10 @@
                         <li>
                             <progress value="65" max="100"></progress>
                             devops工具: 熟悉Ansible, Gitlab, Jenkins, 了解Terraform.
+                        </li>
+                        <li>
+                            <progress value="65" max="100"></progress>
+                            熟悉Nginx, Caddy, KeepAlived等中间件的部署, 配置及维护.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
