--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-13 14:16:16
+ * @LastEditTime: 2023-04-20 16:10:39
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -61,14 +61,14 @@
                     <ul style="list-style: none">
                         <li>
                             <progress value="80" max="100"></progress>
-                            熟悉Docker容器, K8s容器编排技术, 了解容器网络.
+                            熟悉K8s集群部署维护, 应用容器化部署以及问题排查.
                         </li>
                         <li>
                             <progress value="75" max="100"></progress>
                             熟悉CentOS, Ubuntu, Debian发行版, 了解系统参数调优.
                         </li>
                         <li><progress value="75" max="100"></progress>
-                            熟悉Python, 有一定的代码编写经验, 了解其Django框架.
+                            熟悉Python以及Shell, 有一定的代码编写经验, 了解Django框架.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
@@ -80,11 +80,11 @@
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            熟悉使用Grafana做监控展示, 了解Prometheus的原理及使用.
+                            熟悉Nginx, Caddy, KeepAlived等中间件的部署, 配置及维护.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            了解Nginx, Caddy, KeepAlived等中间件的部署, 配置及维护.
+                            熟悉使用Grafana做监控展示, 了解Prometheus的原理及使用.
                         </li>
                         <!-- <li>
                             <progress value="60" max="100"></progress>
@@ -92,7 +92,7 @@
                         </li> -->
                         <li>
                             <progress value="60" max="100"></progress>
-                            了解数据库原理, 有MySQL, Redis的配置使用经验.
+                            了解MySQL, Redis的原理及搭建维护, 有一定的SQL编写经验.
                         </li>
                         <li>
                             <progress value="60" max="100"></progress>
@@ -113,10 +113,9 @@
                     <article>
                         <h2>广东邮电 - 云平台运维 - 2021.03-今 </h2>
                         <p>
-                            1. 在客户私有环境中搭建部署, 维护电信自研组件平台以及K8s集群的运行.  <br>
-                            2. 为用户提供上云支持, 排查组件, K8s集群异常原因并解决问题.
-                            3. 根据安全扫描报告, 协助研发对平台存在的漏洞进行修复或升级.
-                            4. ES集群的搭建, 业务权限配置, 集群异常处理.
+                            1. 搭建, 维护电信天翼云平台以及组件, 包括K8s容器平台, ELK日志平台以及Zookeeper, Kafka, 负载均衡等组件. <br>
+                            2. 为用户解决平台或组件问题, 以及提供技术支持, 协助业务上云: 如应用容器化部署, 业务日志收集等.<br>
+                            3. 公司内部业务的运维支撑.
                         </p>
                     </article>
                     <article>
@@ -245,8 +244,8 @@
                     <article>
                         <h2> </h2>
                         <p>
-                            乐于尝试新事物, 遇到问题能通过Google或官方文档去学习, 解决;<br>
-                            不断提高自己的技术与工作能力. <br>
+                            认真负责, 乐于尝试新事物, 遇到问题能通过Google或官方文档去学习, 解决;<br>
+                            拥有较强的学习能力, 不断提高自己的技术水平. <br>
                             如需查看网页版简历请访问 <a style="color:#444;" href="https://erythrun.github.io/resume/">https://erythrun.github.io/resume/</a>
                         </p>
                     </article>
