--- a/ops.html
+++ b/ops.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-20 16:46:00
+ * @LastEditTime: 2023-04-23 11:01:46
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -80,7 +80,7 @@
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            熟悉Nginx, Caddy, KeepAlived等中间件的部署, 配置及维护.
+                            熟悉Nginx, KeepAlived, Zookeeper, 了解Ceph等组件的部署使用以及维护.
                         </li>
                         <!-- <li>
                             <progress value="65" max="100"></progress>
